projects/client-server-clicker/k8s_configuration/deployment_configuration-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-backend
  namespace: web-clicker
  labels:
    name: api-backend
spec:
  selector:
    name: api-backend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7001
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-backend-deployment
  namespace: web-clicker
  labels:
    name: api-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api-backend-deployment
  template:
    metadata:
      labels:
        name: api-backend-deployment
    spec:
      imagePullSecrets:
      - name: dockerhubaccess
      containers:
        - name: api-backend
          image: oleksiipasichnyk/confl:apiserver_v1
          ports:
            - name: http-server
              containerPort: 7001
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
